# Cacoco

./: .gitignore  CREDITS  Cacoco-x86_64.AppImage.zsync  Cargo.toml  LICENSE.Eternity  README.md  build.rs
.github/workflows/: nightly.yml  release.yml  tests.yml
AppDir/: .DirIcon  AppRun  cacoco.desktop
assets/templates/: classicSTBAR.json  doom2umapinfo.json  nightkicker.json
packaging/linux/: AppImageBuilder.yml  cacoco.desktop
src/: app.rs  assets.rs  cheats.rs  conditions.rs  config.rs  constants.rs  discovery.rs  document.rs  history.rs  hotkeys.rs  io.rs  library.rs  main.rs  model.rs  state.rs  wad.rs
src/document/: actions.rs  layout.rs  mod.rs  sky.rs  tree.rs  umapinfo.rs
src/models/: finale.rs  interlevel.rs  mod.rs  sbardef.rs  skydefs.rs  umap_graph.rs  umapinfo.rs
src/render/: animation.rs  canvas.rs  components.rs  face.rs  fire.rs  graphic.rs  list.rs  minimap.rs  mod.rs  palette.rs  patch.rs  projection.rs  sky.rs  text.rs  umapinfo.rs
src/render/umapinfo/: connectors.rs  connectors_draw.rs  constants.rs  edges.rs  grid.rs  interaction.rs  mod.rs  nodes.rs  viewport.rs
src/state/: interaction.rs  mod.rs  simulation.rs  viewer.rs
src/ui/: context_menu.rs  font_wizard.rs  gamestate.rs  menu.rs  messages.rs  mod.rs  modals.rs  root.rs  shared.rs  viewport.rs  viewport_controller.rs  vitals.rs
src/ui/layers/: browser.rs  colors.rs  layouts.rs  mod.rs  sky.rs  thumbnails.rs  tree.rs  umapinfo.rs
src/ui/properties/: animation.rs  common.rs  compatibility.rs  components.rs  conditions.rs  (+18 more)
src/wad/: legacy.rs  mod.rs  umapinfo.rs  util.rs
(+1 files in other folders)
