[package]
name = "cacoco"
version = "0.9.1"
edition = "2024"

[build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = "1.0.100"
bitflags = { version = "2.10.0", features = ["serde"] }
eframe = "0.33.3"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
once_cell = "1.21.3"
rand = "0.9.2"
rfd = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
zip = "7.0.0"
directories = "6.0.0"
shlex = "1.3.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
